javascript topics and coding challenges added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       });
     </script>
     <script src="./script.js"></script>
-    <script src="./improve.js"></script>
+    <!-- <script src="./improve.js"></script> -->
+    <!-- <script src="./oops.js"></script> -->
 </body>
 </html>
